--- a/config.json
+++ b/config.json
@@ -32,7 +32,7 @@
         },
         "col_settings": {
           "start_col": 1,
-          "cols": null
+          "cols": [1, 3, 5, 7, 9, 11, 13]
         }
       }
     }
