--- a/config.json
+++ b/config.json
@@ -3,24 +3,33 @@
 
   "option_2_configs": [
     {
-      "ROOT_DIRECTORY": "C:\\Users\\gohja\\Desktop\\ASTAR intenship data\\CV Hysteresis\\20220301\\HZO_LOT3_WAFER3_CV",
+      "ROOT_DIRECTORY": "C:\\Users\\gohja\\Desktop\\ASTAR intenship data\\CV Hysteresis\\20220401\\HZO_LOT3_S8_CV",
 
       "TO_READ": {
         "file_type": "csv",
-        "relative_folder_directories": ["\\CV-8x8-new"],
-        "files": ["D1-i.csv", "D1-f.csv", "D2-i.csv", "D2-f-100hz-1v.csv"],
+        "relative_folder_directories": ["\\CV-8x8"],
+        "files": [
+          "D1-i.csv",
+          "D1-f.csv",
+          "D2-i.csv",
+          "D2-f.csv",
+          "D3-i.csv",
+          "D3-f.csv",
+          "D4-i.csv",
+          "D4-f.csv"
+        ],
         "cols": [1, 2],
         "rows": [259, 460]
       },
 
       "TO_WRITE": {
-        "folder_directory": "C:\\Users\\gohja\\Desktop\\ASTAR intenship data\\CV Hysteresis\\20220301\\HZO_LOT3_WAFER3_CV",
-        "file_name": "compile_automation_test.xlsx",
+        "folder_directory": "\\",
+        "file_name": "compile_automation.xlsx",
         "row_settings": {
           "start_row": 3
         },
         "col_settings": {
-          "start_col": "D",
+          "start_col": "BB",
           "cols": "auto"
         }
       }
