--- a/config.json
+++ b/config.json
@@ -3,31 +3,29 @@
 
   "option_2_configs": [
     {
-      "ROOT_DIRECTORY": "C:\\Users\\gohja\\Desktop\\ASTAR intenship data\\CV Hysteresis\\20220401\\HZO_LOT3_S8_CV\\",
+      "ROOT_DIRECTORY": "C:\\Users\\gohja\\Desktop\\ASTAR intenship data\\CV Hysteresis_LOT3\\20220501\\HZO_LOT3_S6_6nm",
 
       "TO_READ": {
         "file_type": "csv",
-        "relative_folder_directories": [],
-        "files": [
-          "D1-i.csv",
-          "D1-f.csv",
-          "D2-i.csv",
-          "D2-f.csv",
-          "D3-i.csv",
-          "D3-f.csv"
+        "relative_folder_directories": [
+          "\\CV-100x100",
+          "\\CV-50x100",
+          "\\CV-50x50",
+          "\\CV-20x20"
         ],
+        "files": ["D1-i.csv", "D1-f.csv", "D2-i.csv", "D2-f.csv"],
         "cols": ["B", "C"],
         "rows": [259, 460]
       },
 
       "TO_WRITE": {
         "relative_folder_directory": "\\",
-        "file_name": "mapitin.xlsx",
+        "file_name": "CV_compile.xlsx",
         "row_settings": {
           "start_row": 3
         },
         "col_settings": {
-          "start_col": "B",
+          "start_col": "AH",
           "cols": "auto"
         }
       }
