--- a/config.json
+++ b/config.json
@@ -6,11 +6,11 @@
       "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/CV Hysteresis_LOT3/PV/HZO_LOT3_WAFER1_PV/convert_xls_to_xlsx_test",
 
       "TO_READ": {
-        "file_type": "xls",
+        "file_type": "csv",
         "relative_folder_directories": ["/"],
-        "files": ["10x10_Hyst_d1.xls"],
-        "cols": ["C", "D"],
-        "rows": [44, 2044]
+        "files": ["D3-i.csv", "D3-f.csv"],
+        "cols": ["B", "C"],
+        "rows": [259, 460]
       },
 
       "TO_WRITE": {
