--- a/config.json
+++ b/config.json
@@ -3,19 +3,21 @@
 
   "option_2_configs": [
     {
-      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/CV Hysteresis_LOT3/20221201/HZO_LOT2_WAFER6_PV",
+      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/CV Hysteresis/Ferroelectric workstation PV/w6",
 
       "TO_READ": {
         "file_type": "xls",
         "relative_folder_directories": ["/100x100"],
-        "files": ["d1-i.xls", "d1-f.xls", "d2-i.xls", "d3-i.xls", "d3-f.xls"],
+        "files": ["d1-i.xls", "d1-f.xls", "d2-i.xls", "d2-f.xls"],
         "cols": ["C", "D"],
         "rows": [44, 2044]
       },
 
       "TO_WRITE": {
+        "append_folder_dir_header": true,
+        "append_file_name_header": true,
         "relative_folder_directory": "/",
-        "file_name": "CV_compile.xlsx",
+        "file_name": "PV_compile_S5.xlsx",
         "row_settings": {
           "start_row": 1
         },
