--- a/config.json
+++ b/config.json
@@ -3,12 +3,12 @@
 
   "option_2_configs": [
     {
-      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/CV Hysteresis/Ferroelectric workstation PV/w6",
+      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/CV Hysteresis/PV/w4/100x100-Copy",
 
       "TO_READ": {
         "file_type": "xls",
-        "relative_folder_directories": ["/100x100"],
-        "files": ["d1-i.xls", "d1-f.xls", "d2-i.xls", "d2-f.xls"],
+        "relative_folder_directories": ["/"],
+        "files": ["d1-i.xls", "d1-f.xls"],
         "cols": ["C", "D"],
         "rows": [44, 2044]
       },
@@ -17,7 +17,7 @@
         "append_folder_dir_header": true,
         "append_file_name_header": true,
         "relative_folder_directory": "/",
-        "file_name": "PV_compile_S5.xlsx",
+        "file_name": "compile_test.xlsx",
         "row_settings": {
           "start_row": 1
         },
