--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
       "TO_READ": {
         "file_type": "xls",
         "relative_folder_directories": ["/"],
-        "files": ["d1-i.xls", "d1-f.xls"],
+        "files": ["d1-i.xls", "d1-f.xls", "d2-i.xls", "d2-f.xls"],
         "cols": ["C", "D"],
         "rows": [44, 2044]
       },
