--- a/config.json
+++ b/config.json
@@ -11,7 +11,15 @@
           "/25C_initial",
           "/-40C",
           "/-20C",
-          "/0C"
+          "/0C",
+          "/25C",
+          "/50C",
+          "/75C",
+          "/100C",
+          "/125C",
+          "/150C",
+          "/175C",
+          "/25C_final"
         ],
         "files": {
           "type": "match",
