--- a/config.json
+++ b/config.json
@@ -10,10 +10,10 @@
         "relative_folder_directories": ["/"],
         "files": {
           "type": "hardcode",
-          "hardcoded_values": ["test.txt"],
-          "matching_values": ["A3", "pos"]
+          "hardcoded_values": [],
+          "matching_values": ["text"]
         },
-        "cols": ["A", "B"],
+        "cols": ["A"],
         "rows": [1, 3]
       },
 
@@ -21,7 +21,7 @@
         "append_folder_dir_header": true,
         "append_file_name_header": false,
         "relative_folder_directory": "/",
-        "file_name": "test.xlsx",
+        "file_name": "test_compile.xlsx",
         "row_settings": {
           "start_row": 1
         },
