--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
 
   "option_2_configs": [
     {
-      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/Frequency_dependence HZO_LOT3_WAFER8_PV",
+      "ROOT_DIRECTORY": "C:/Users/gohja/Desktop/ASTAR intenship data/Frequency_dependence HZO_LOT3_WAFER8_PV/die6",
 
       "TO_READ": {
         "file_type": "xls",
@@ -12,7 +12,7 @@
           "type": "match",
           "hardcoded_values": [],
           "matching": {
-            "force_values": ["50x100"],
+            "force_values": ["100x100"],
             "ordered_values": [
               "100Hz",
               "550Hz",
@@ -23,7 +23,7 @@
               "1.5v",
               "2v"
             ],
-            "omit": ["breakdown"]
+            "exclude": ["breakdown"]
           }
         },
         "cols": ["C", "D"],
@@ -31,10 +31,18 @@
       },
 
       "TO_WRITE": {
-        "append_folder_dir_header": true,
-        "append_file_name_header": true,
-        "relative_folder_directory": "/test",
-        "file_name": "PV_compile_test.xlsx",
+        "append_folder_dir_header_config": {
+          "should_append": true,
+          "omit": []
+        },
+
+        "append_file_name_header_config": {
+          "should_append": true,
+          "omit": ["die6", "100x100"]
+        },
+
+        "relative_folder_directory": "/compile",
+        "file_name": "PV_compile_automation.xlsx",
         "row_settings": {
           "start_row": 1
         },
