--- a/config.json
+++ b/config.json
@@ -13,16 +13,7 @@
           "hardcoded_values": [],
           "matching": {
             "force_values": ["100x100"],
-            "ordered_values": [
-              "100Hz",
-              "550Hz",
-              "1000Hz",
-              "5500Hz",
-              "10000Hz",
-              "1.2v",
-              "1.5v",
-              "2v"
-            ],
+            "ordered_values": ["100Hz"],
             "exclude": ["breakdown"]
           }
         },
@@ -32,7 +23,7 @@
 
       "TO_WRITE": {
         "append_folder_dir_header_config": {
-          "should_append": true,
+          "should_append": false,
           "omit": []
         },
 
